// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRuleFooter renders 1`] = `
<DocumentFragment>
  <div
    class="tab-content-footer"
  >
    <button
      class="button--component tab-content-footer-remove-btn btn btn-outline-primary"
      data-testid="tab-content-footer-remove-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      class="button--component tab-content-footer-select-btn btn btn-primary"
      data-testid="tab-content-footer-select-btn"
      type="button"
    >
      Apply
    </button>
  </div>
</DocumentFragment>
`;

exports[`EditRuleFooter renders with apply button disabled 1`] = `
<DocumentFragment>
  <div
    class="tab-content-footer"
  >
    <button
      class="button--component tab-content-footer-remove-btn btn btn-outline-primary"
      data-testid="tab-content-footer-remove-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      class="button--component tab-content-footer-select-btn btn btn-primary"
      data-testid="tab-content-footer-select-btn"
      disabled=""
      type="button"
    >
      Apply
    </button>
  </div>
</DocumentFragment>
`;

exports[`EditRuleFooter renders with remove button 1`] = `
<DocumentFragment>
  <div
    class="tab-content-footer"
  >
    <button
      class="button--component tab-content-footer-remove-btn btn btn-outline-danger"
      data-testid="tab-content-footer-remove-btn"
      type="button"
    >
      <svg
        fill="none"
        height="14"
        opacity="1"
        stroke="#051022"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
      <span
        class="text-with-icons"
      >
        Remove
      </span>
    </button>
    <button
      class="button--component tab-content-footer-select-btn btn btn-primary"
      data-testid="tab-content-footer-select-btn"
      type="button"
    >
      Apply
    </button>
  </div>
</DocumentFragment>
`;
